tests/snapshots/multi__pass__attributes.snap
---
source: tests/multi.rs
expression: format_results(&results)
---
=== attrs/lib.go ===
//soppo:generated v1
// HTTP method enum
package attrs

/*soppo:enum
Method {
    Get
    Post
    Put
    Delete
}
*/
type Method interface {
	isMethod()
}

type Method_Get struct {}
func (Method_Get) isMethod() {}
func (Method_Get) String() string { return "Get" }

type Method_Post struct {}
func (Method_Post) isMethod() {}
func (Method_Post) String() string { return "Post" }

type Method_Put struct {}
func (Method_Put) isMethod() {}
func (Method_Put) String() string { return "Put" }

type Method_Delete struct {}
func (Method_Delete) isMethod() {}
func (Method_Delete) String() string { return "Delete" }

var (
	MethodGet Method = Method_Get{}
	MethodPost Method = Method_Post{}
	MethodPut Method = Method_Put{}
	MethodDelete Method = Method_Delete{}
)

// HTTP route attribute
type Route struct {
	Path string
	Method Method
}

// Database column attribute
type Column struct {
	Name string
	PrimaryKey bool
}



=== cmd/main.go ===
//soppo:generated v1
package main

import (
	"fmt"
	"github.com/halcyonnouveau/soppo/runtime"
	"github.com/test/attributes/attrs"
)

// Function with attribute using enum value
func GetUsers() string {
	return "users"
}

func CreateUser() string {
	return "created"
}

// Type with attribute
type Handler struct {
	Name string
}

// Struct with field attributes
type User struct {
	ID string
	Email string
}

func main() {
	_ = GetUsers()

	// Query function attribute with enum
	route, found := runtime.GetAttr[attrs.Route]("main.GetUsers", "")
	if found {
		fmt.Println("Route:", route.Path, route.Method)
	}

	// Query struct field attributes
	idCol, found := runtime.GetAttr[attrs.Column]("main.User", "ID")
	if found {
		fmt.Println("ID column:", idCol.Name, "primary:", idCol.PrimaryKey)
	}
}

func init() {
	runtime.RegisterAttr("main.GetUsers", "", attrs.Route{Path: "/users", Method: attrs.MethodGet})
	runtime.RegisterAttr("main.CreateUser", "", attrs.Route{Path: "/users", Method: attrs.MethodPost})
	runtime.RegisterAttr("main.Handler", "", attrs.Route{Path: "/api", Method: attrs.MethodGet})
	runtime.RegisterAttr("main.User", "ID", attrs.Column{Name: "user_id", PrimaryKey: true})
	runtime.RegisterAttr("main.User", "Email", attrs.Column{Name: "email"})
}
