tests/snapshots/multi__pass__cross_package_struct_literal.snap
---
source: tests/multi.rs
expression: format_results(&results)
---
=== cmd/main.go ===
//soppo:generated v1
package main

import (
	"fmt"
	"github.com/test/cross_package_struct_literal/helpers"
)

func main() {
	// Struct literal with cross-package type should mark import as used
	p := helpers.Point{X: 1, Y: 2}
	fmt.Println(p)

	// Cross-package enum variant with struct literal
	r := helpers.Shape_Rectangle{TopLeft: helpers.Point{X: 10, Y: 20}}
	fmt.Println(r)
}



=== helpers/types.go ===
//soppo:generated v1
package helpers

type Point struct {
	X int
	Y int
}

/*soppo:enum
Shape {
    Circle {
        Radius int
    }
    Rectangle {
        TopLeft Point
    }
}
*/
type Shape interface {
	isShape()
}

type Shape_Circle struct {
	Radius int
}
func (Shape_Circle) isShape() {}

type Shape_Rectangle struct {
	TopLeft Point
}
func (Shape_Rectangle) isShape() {}
