tests/snapshots/multi__pass__import_generated_enum.snap
---
source: tests/multi.rs
expression: format_results(&results)
---
=== cmd/main.go ===
//soppo:generated v1
package main

import "fmt"
import "github.com/test/import_gen_enum/generated"

func describe(s generated.Status) string {
	result := ""
	switch s.(type) {
	case generated.Status_Pending:
		result = "waiting"
	case generated.Status_Active:
		result = "in progress"
	case generated.Status_Complete:
		result = "done"
	}
	return result
}

func main() {
	status := generated.StatusActive
	fmt.Println(describe(status))
}
