tests/snapshots/multi__pass__interface_cross_package.snap
---
source: tests/multi.rs
expression: format_results(&results)
---
=== cmd/main.go ===
//soppo:generated v1
package main

import "fmt"
import "github.com/test/iface/interfaces"

type MyReader struct {
	data string
}

func (r *MyReader) Read() string {
	return r.data
}

func useReader(r interfaces.Reader) {
	fmt.Println(r.Read())
}

func main() {
	reader := (&MyReader{data: "hello"})
	useReader(reader)
}



=== interfaces/lib.go ===
//soppo:generated v1
package interfaces

type Reader interface {
	Read() string
}
