tests/snapshots/multi__pass__multiple_returns.snap
---
source: tests/multi.rs
expression: format_results(&results)
---
=== cmd/main.go ===
//soppo:generated v1
package main

import (
	"fmt"
	"github.com/test/multiret/helpers"
)

func main() {
	num, str := helpers.GetPair()
	fmt.Println(num, str)
}



=== helpers/lib.go ===
//soppo:generated v1
package helpers

func GetPair() (int, string) {
	return 42, "hello"
}
