tests/snapshots/multi__pass__nilable_cross_package.snap
---
source: tests/multi.rs
expression: format_results(&results)
---
=== cmd/main.go ===
//soppo:generated v1
package main

import (
	"fmt"
	"github.com/test/nilable_cross/types"
)

func main() {
	cfg1 := types.Config{Name: "app", Logger: nil}
	cfg2 := types.Config{Name: "app", Logger: (&types.Logger{Prefix: "[INFO]"})}

	fmt.Println(cfg1.Name)
	if cfg2.Logger != nil {
		fmt.Println(cfg2.Logger.Prefix)
	}
}



=== types/user.go ===
//soppo:generated v1
package types

type Logger struct {
	Prefix string
}

type Config struct {
	Name string
	Logger *Logger //soppo:nilable
}
